k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tech-challenge-2-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tech-challenge-2-app
  template:
    metadata:
      labels:
        app: tech-challenge-2-app
    spec:
      containers:
        - name: tech-challenge-2-app
          image: 113645088585.dkr.ecr.us-east-1.amazonaws.com/tech-challenge-2-hello-flask:latest
          ports:
            - containerPort: 5000
