k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tech-challenge-2-service
spec:
  selector:
    app: tech-challenge-2-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
